--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "file-stream-rotator": "^0.5.7",
+    "morgan": "^1.10.0",
+    "morgan-debug": "^2.0.0",
     "mysql": "^2.18.1",
     "node-schedule": "^2.0.0",
     "nodemon": "^2.0.7"
